tests/baselines/reference/asiPreventsParsingAsInterface05.errors.txt
tests/cases/conformance/interfaces/interfaceDeclarations/asiPreventsParsingAsInterface05.ts(3,5): error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
tests/cases/conformance/interfaces/interfaceDeclarations/asiPreventsParsingAsInterface05.ts(10,1): error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
tests/cases/conformance/interfaces/interfaceDeclarations/asiPreventsParsingAsInterface05.ts(11,1): error TS2304: Cannot find name 'I'.


==== tests/cases/conformance/interfaces/interfaceDeclarations/asiPreventsParsingAsInterface05.ts (3 errors) ====
    "use strict"
    
    var interface: number;
        ~~~~~~~~~
!!! error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
    
    // 'interface' is a strict mode reserved word, and so it would be permissible
    // to allow 'interface' and the name of the interface to be on separate lines;
    // however, this complicates things, and so it is preferable to restrict interface 
    // declarations such that their identifier must follow 'interface' on the same line.
    
    interface   // This should be the identifier 'interface'
    ~~~~~~~~~
!!! error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
    I           // This should be the identifier 'I'
    ~
!!! error TS2304: Cannot find name 'I'.
    { }         // This should be a block body